--- a/SmallWorld/SmallWorld/SmallWorld.CSharp.csproj
+++ b/SmallWorld/SmallWorld/SmallWorld.CSharp.csproj
@@ -66,7 +66,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Enemy\enemy.cs" />
+    <Compile Include="Assets\Scripts\Food\Food.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\FoodManager.cs" />
     <Compile Include="Assets\Scripts\Gameplay\LevelManager.cs" />
     <Compile Include="Assets\Scripts\Gameplay\walls.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
