Camera: Improve camera movement
The camera now moves only when the player reaches
the edges of the screen. The camera speed is 5

Signed-off-by: Rudra Nil Basu <rudra.nil.basu.1996@gmail.com>

--- a/SmallWorld/SmallWorld/SmallWorld.CSharp.csproj
+++ b/SmallWorld/SmallWorld/SmallWorld.CSharp.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Camera\CameraControls.cs" />
+    <Compile Include="Assets\Scripts\Camera\CameraEdgeFollow.cs" />
     <Compile Include="Assets\Scripts\Camera\SmoothFollow.cs" />
     <Compile Include="Assets\Scripts\Food\Food.cs" />
     <Compile Include="Assets\Scripts\Gameplay\FoodManager.cs" />
